[gd_scene load_steps=6 format=3 uid="uid://88ewv0bjrs75"]

[ext_resource type="Script" uid="uid://dy5sqss6mggmr" path="res://modules/menus/achievements_menu.gd" id="1_c540o"]
[ext_resource type="Resource" uid="uid://b1q2s7cnxmpqr" path="res://resources/achievements/player_achievements.tres" id="2_vvqr2"]
[ext_resource type="Texture2D" uid="uid://dd54mqj8v37at" path="res://icon.svg" id="3_0djp0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvqr2"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0
bg_color = Color(0.25170106, 0.078674085, 6.016344e-08, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.52454025, 0.19758949, 1.92523e-07, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Theme" id="Theme_0djp0"]
MarginContainer/constants/margin_bottom = 64
MarginContainer/constants/margin_left = 64
MarginContainer/constants/margin_right = 64
MarginContainer/constants/margin_top = 64
PanelContainer/styles/panel = SubResource("StyleBoxFlat_vvqr2")

[node name="AchievementsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0djp0")
script = ExtResource("1_c540o")
achievements = ExtResource("2_vvqr2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Top" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Top"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Top/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Top/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Player Achievements"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/Top/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Top/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="Main" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Main"]
layout_mode = 2

[node name="AchievementList" type="ItemList" parent="MarginContainer/VBoxContainer/Main/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Main/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Main/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/Main/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Main/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Main/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3_0djp0")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Main/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(35.27, 0)
layout_mode = 2

[node name="AchievementName" type="Label" parent="MarginContainer/VBoxContainer/Main/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Achievement Name"

[node name="HSeparator" type="Control" parent="MarginContainer/VBoxContainer/Main/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/Main/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="AchivementFlavor" type="Label" parent="MarginContainer/VBoxContainer/Main/HBoxContainer/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"HeaderSmall"
text = "Here comes the flavor text"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Main/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Foot" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/Foot"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Foot/CenterContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Some footer placeholder"
horizontal_alignment = 1
vertical_alignment = 1
